fixed page width when no image is displayed

--- a/stylesheets/section.css
+++ b/stylesheets/section.css
@@ -33,6 +33,9 @@
     .part > .image {
         display: none;
     }
+    .part > .text {
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width: 819px) {
