--- a/stylesheets/notion.css
+++ b/stylesheets/notion.css
@@ -119,3 +119,18 @@ code {
 .sans {
     font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
 }
+
+details > summary {
+    font-weight: bold;
+    font-size: larger;
+    margin: -.5em -.5em 0;
+    padding: .5em;
+}
+
+.fit-image {
+    object-fit: cover;
+}
+
+.bulleted-list > li {
+    list-style-type:disc;
+}
